# SOAR-fitness-agent-rl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  TROUBLESHOOTING.md  benchmark_results copy.json  benchmark_results.json  main.py  main_weekly.py  push_to_git.sh  pyproject-mac.toml  pyproject.toml  pyproject_local.toml  train.py  train_rl.sh
.models/: history.jsonl  model.json
.models/trajectories/train/: 0000.jsonl  0001.jsonl  0002.jsonl  0003.jsonl
data/: joint_exercises_metadata.csv
scripts/: B200_SETUP.md  README_RAG_TRAINING.md  becnhmark_rag_fitness_art.py  check_gpu.py  check_gpu_compat.py  check_tokenizer.py  check_trl_config.py  check_vllm.py  debug_qwen_tokenizer.py  finetune_cot_qwen.py  fitnessrl_art.py  rag_fitnessrl_art.py  rag_fitnessrl_art_blackwell.py  rag_fitnessrl_v2 copy.py  rag_fitnessrl_v2.py  train_rl.sh  upload_model_to_hf.py  validate_saved_model.py
scripts/prime-rl/: README.md  prime-rag-fitnessrl.py  train_grpo.py
src/: config.py  data_loader.py  helpers.py  models.py  services.py
src/agent/: rollout.py  tools.py
src/data_utils/: create_synthetic_data.py
src/env/: verifiers_utils.py
src/env/verifiable_rewards/: nutrition_rewards.py  schema_rewards.py
src/training/: trainer.py
