[project]
name = "fitness-reasoning-rl-agent"
version = "0.1.0"
description = "Fitness Agent trained with LangGraph and ART (Agent Reinforcement Training)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["rl", "reinforcement-learning", "langgraph", "fitness", "nutrition", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies
    "jsonschema>=4.25.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # ART and LangGraph
    "openpipe-art[backend,langgraph]>=0.4.11",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    
    # External services
    "pinecone-client>=5.0.0",
    "litellm>=1.0.0",
    
    # Data and ML
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Utilities
    "tenacity>=8.2.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]

[project.scripts]
train = "train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "art.*",
    "weave.*",
    "pinecone.*",
    "litellm.*",
    "datasets.*",
    "langchain_core.*",
    "langgraph.*",
]
ignore_missing_imports = true
